--- a/Studio2/studiostyle.css
+++ b/Studio2/studiostyle.css
@@ -27,7 +27,7 @@ header a{
    text-align: left;
 }
 .header-column-middle{
-    font-size: large;
+    font-size: 20px;
     font-weight: bolder;
     text-align: center;
 }
@@ -43,8 +43,7 @@ header a{
 .grid-container {
     background-color: none;
   	display: grid;
-  	grid-template-columns: 9% 80% 9%;
-  	gap: 10px;
+  	grid-template-columns: 5% 90% 5%;
   	background-color: none;
 }
 
@@ -76,6 +75,7 @@ header a{
     margin-bottom: auto;
 }
 .left-container i{
+    padding-bottom: 5px;
     color: black;
     font-size: 40px;
 }
@@ -88,18 +88,18 @@ header a{
 
 .item2{
     padding: none;
-    width: 1013px;
+    width: 100%;
     height: 650px;
     align-items: center;
     justify-content: center;
 }
 .picture-container{
-    width: 1013px;
+    width: 1330px;
     height: 650px;
     position: relative;
 }
 .black-opacity-background{
-    width: 1200px;
+    width: 90%;
     height: 650px;
     background-color: black;
     z-index: 4;
@@ -110,7 +110,7 @@ header a{
     position: relative;
     z-index: 2;
     opacity: 1;
-    width: 1200px;
+    width: 100%;
     height: 650px;
 }
 .bottom-right-text{
@@ -118,7 +118,7 @@ header a{
     height: 300px;
     opacity: 1;
     bottom: 50px;
-    right: 200px;
+    right: 110px;
     z-index: 4;
     color: #FFFFFF;
     position: absolute;
@@ -132,7 +132,7 @@ header a{
     text-align: right;
     font-size: 15px;
 }
-.bottom-right-text .start-button{
+.bottom-right-text a{
     z-index: 4;
     color: #FFFFFF;
     text-decoration: none;
@@ -144,8 +144,7 @@ header a{
     background-color: none;
     cursor: pointer;
 }
-.bottom-right-text .start-button:hover{
-    color: #FFFFFF;
+.bottom-right-text a:hover{
     font-weight: bolder;
 }
 
@@ -155,9 +154,9 @@ header a{
     align-items: center;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 .item3 p{
+    text-align: center;
     font-size: 20px;
     font-weight: bolder;
 }
