--- a/Studio2/studiostyle.css
+++ b/Studio2/studiostyle.css
@@ -168,7 +168,7 @@ header a{
 }
 .color-middle{
     margin-top: 100px;
-    height: 100%;
+    height: 1300px;
     padding: 5%;
     background-color: #F1E7E5;
 }
