--- a/Studio2/studiostyle.css
+++ b/Studio2/studiostyle.css
@@ -173,7 +173,6 @@ header a{
     background-color: #F1E7E5;
 }
 .row-1{
-    margin-top: 50px;
     margin-bottom: 50px;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -199,7 +198,7 @@ header a{
     z-index: 4;
 }
 .picture-on-left img{
-    top:-250px;
+    top:-200px;
     left:0px;
     position: absolute;
     width: 100%;
@@ -322,15 +321,14 @@ header a{
     font-size: 120px;
     padding-top: 10px;
     position: absolute;
-    bottom: -200px;
+    top:-100px;
     left:-35px;
     color:#FFFFFF;
     writing-mode: vertical-rl;
     z-index: 4;
 }
 .row-3 .picture-on-left img{
-    bottom: -100px;
-    left: 0px;
+    top:-150px;
     position: absolute;
     width: 100%;
     height: 520px;
@@ -344,52 +342,152 @@ header a{
     width: 350px;
     display: flex;
     left: 550px;
-    position: absolute;
     align-items: center;
     background-color: black;
 }
+
+
+/*SECOND CONTENT ZONE*/
+
+
 .second-content{
-    margin-top: 50px;
+    margin-top: 70px;
     margin-bottom: 50px;
+    width: 100%;
 }
 .second-content h1{
     font-size: 50px;
     text-align: center;
 }
 .second-content-color-middle{
-    margin-top: 200px;
-    margin-bottom: 200px;
     width: 100%;
-    height: 600px;
+    height: 750px;
     background-color: #F1E7E5;
-    position: relative;;
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-.second-content-row-1{
-    top: -150px;
-    left: 180px;
+.second-content-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.slider {
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
     position: absolute;
+    top:-90px;
+    left: -5px;
+  }
+  .slides {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+  
+  .slides::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    display: none;
+  }
+  .slides::-webkit-scrollbar-thumb {
+    background: #666;
+    border-radius: 10px;
+  }
+  .slides::-webkit-scrollbar-track {
+    background: transparent;
+  }
+  .slides > div {
+    scroll-snap-align: start;
+    flex-shrink: 0;
+    width: 100%;
+    height: 410px;
+    margin-right: 50px;
+    border-radius: 10px;
+    transform-origin: center center;
+    transform: scale(1);
+    transition: transform 0.5s;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+  }
+  .slider > a {
+    margin-top: 20px;
+    display: inline-flex;
+    width: 15px;
+    height: 15px;
+    background: grey;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    position: relative;
+  }
+  .slider a:active{
+    background: #666;
+  }
+  .slider2 {
+    margin-top: 20px;
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    position: absolute;
+    bottom:-90px;
+    left: -5px;
+  }
+  .slider2 > a {
+    margin-top: 20px;
+    display: inline-flex;
+    width: 15px;
+    height: 15px;
+    background: grey;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    position: relative;
+  }
+  .slider2 a:active{
+    background: #666;
+  }
+.row{
     display: flex;
 }
-.second-content-row-1 p{
-    position: absolute;
-    right: 0px;
-    top: 0px;
+.column{
+    flex:33.33%;
+    padding: 20px;
 }
-.second-content-row-2{
-    bottom: -20%;
-    left: 20%;
-    position: absolute;
-    display: flex;
-}
-.second-container-picture-container-1{
-    margin: 20px;
+.col-picture-container{
+    position: relative;
     width: 350px;
     height: 400px;
     background-color: grey;
+    box-shadow: 5px 5px 5px grey;
 }
+.col-picture-container img{
+    width: 350px;
+    height: 400px;
+    position: relative;
+    object-fit: cover;
+    object-position: center;
+}
+.topright {
+    position: absolute;
+    top: 8px;
+    right: 16px;
+    font-size: 18px;
+    z-index: 3;
+  }
+
 .footer{
     background-color: #F1E7E5;
     color:black;
     height: 200px;
 }
-  
