--- a/Grooming1/groomingstyle.css
+++ b/Grooming1/groomingstyle.css
@@ -125,7 +125,7 @@ header a{
     width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns:25% 25% 25% 25%;
     scroll-snap-type: y mandatory;
     scroll-snap-align: center;
 }
@@ -133,35 +133,79 @@ header a{
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
 }
+.item-2{
+    grid-row: 1;
+    grid-column: 3;
+}
+.item-3{
+    grid-row: 1;
+    grid-column: 4;
+}
+.item-4{
+    grid-row: 2;
+    grid-column: 3;
+}
+.item-5{
+    grid-row: 2;
+    grid-column: 4;
+}
+.item-6{
+    grid-row: 3;
+    grid-column: 1;
+}
+.item-7{
+    grid-row: 3;
+    grid-column: 2;
+
+}
+.item-8{
+    grid-row: 3;
+    grid-column: 3;
+}
+.item-9{
+    grid-row: 3;
+    grid-column: 4;
+}
 #navigate-introduction-part img{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+#navigate-introduction-part > [class*=item-]{
+    position: relative;
 }
 .item-container{
-    padding: 20px;
+    padding: 30px;
     width: 100%;
     height: 100%;
     position: relative;
-    background-color: bisque;
 }
 .item-container h4{
-    font-size: 20px;
+    font-size: 30px;
 }
 .item-container p{
     font-size: 15px;
 }
 .item-button{
+    width: 45%;
     background-color: black;
     color: #FFFFFF;
     text-decoration: none;
     padding: 15px 30px;
     position: absolute;
-    bottom: 10px;
+    bottom: 20px;
     text-align: center;
 }
 .item-button:hover{
-    background-color: gray;
+    color: black;
+    font-weight: bold;
+    background: none;
+    border: 1px solid black;
     cursor: pointer;
 }
 /*PART 4*/
@@ -174,32 +218,61 @@ header a{
 .other-services-part{
     width: 100%;
     height: 40vh;
-    background-color: aqua;
+    background-color:black;
     display: grid;
     grid-template-columns: auto auto auto auto;
 }
 .service-item1{
-    background-color: blueviolet;
+    background-color: black;
     grid-column: 1 / span 2;
     grid-row: 1 / span 2;
 }
 .service-item2{
-    background-color: aquamarine;
+    background-color: black;
     grid-row: 1;
     grid-column: span 2;
 }
 .service-item3{
-    background-color: blue;
+    background-color: black;
 }
 .card-service-item{
     position: relative;
+    width: 100%;
     height: 100%;
 }
-.card-service-item h4{
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px;
-    display: none;
+.card-service-item:hover .overlay{
+    opacity: 0.5;
+    background-color: black;
+    border: #FFFFFF;
+    z-index: 2;
+    transition: .5s ease;
+}
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+.overlay {
+    position: relative;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 20px;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+}
+.overlay h4{
+    color: white;
+    font-size: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 .card-service-item img{
     width: 100%;
