--- a/Grooming1/groomingstyle.css
+++ b/Grooming1/groomingstyle.css
@@ -284,3 +284,22 @@ header a{
     right: 0;
     object-fit: cover;
 }
+.footer{
+    background-color: #F1E7E5;
+    padding: 30px;
+    color:black;
+    width: 100%;
+    height: 30vh;
+   border-top-style: 2px solid black;
+   border-right-style: none;
+   border-bottom-style: none;
+   border-left-style: none;
+   margin-top: 20px;
+}
+.row::after{
+    display: table;
+}
+.column{
+    float:left;
+    width: 33.33%;
+}
