--- a/Vet1/vetstyle.css
+++ b/Vet1/vetstyle.css
@@ -1,27 +1,40 @@
 *{
     margin: 0;
+    overflow-x: hidden;
+  }
+  ::-webkit-scrollbar{
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: #F4F4F4;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #5C5C5C;
+    border-radius: 10px;
   }
   body{
-      background-color: #F4F4F4;
-      font-family: Anaheim;
+    background-color: #F4F4F4;
+    font-family: Anaheim;
+    text-align: justify;
   }
   header{
-      overflow: hidden;
-      padding: 15px;
-      background-color: #F4F4F4;
+    width: 100%;
+    overflow: hidden;
+    padding: 15px;
+    background-color: #F4F4F4;
   }
   header a{
-      color: black;
-      text-decoration: none;
-      /*font-family: ;*/
+    color: black;
+    text-decoration: none;
   }
   .header-right{
-      float: right;
+    float: right;
   }
   .header-right a{
-    padding: 10px 10px;
+    padding: 10px;
   }
   nav{
+    width: 100%;
     padding: 20px;
     background-color : #5C5C5C;
     padding-left: 20px;
@@ -33,20 +46,20 @@
   }
   nav a:hover{
     font-weight: bold;
-    background-color: #444444;
-    height: auto;
+    height: 100%;
+  }
+  .content{
+    width: 100%;
   }
   /*top-content*/
   .top-content-container{
     position: relative;
     padding-bottom: 20px;
-    max-width: 100%;
     z-index: 1;
   }
   .content img{
     width: 100%;
     height: 100%;
-    display: block;
     margin-left: auto;
     margin-right: auto;
   }
@@ -60,7 +73,6 @@
     text-decoration:none;
     color: #F4F4F4;
     background-color: #444444;
-    padding:15px 20px;
     border-radius: 5px;
     border: none;
     transform: translate(-50%, -50%);
@@ -74,8 +86,56 @@
   }
   /*folder_part*/
   .file-content{
-    padding: 20px;
+    width: 98%;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-bottom: 20px;
     color:#063F5C;
+  }
+  
+  .item1 {
+    text-align: left;
+    grid-column: 1 / span 3;
+    grid-row: 1;
+    text-align: justify;
+    padding: 5px;
+    width: 100%;
+  }
+  
+  .item2 {
+    grid-column: 4;
+    grid-row: 1;
+    width: 50px;
+    margin-left: auto;
+    vertical-align: bottom;
+
+  }
+  .item3 {
+    width: 100%;
+    text-align: left;
+    grid-column: 1 / span 4;
+    grid-row: 2 / span 4;
+    text-align: justify;
+    padding-top: 5px;
+    transition-timing-function: ease-in-out;
+  }
+  #dropdown{
+    display: none;
+  }
+  #dropdown2{
+    display: none;
+  }
+  #dropdown3{
+    display: none;
+  }
+  #dropdown4{
+    display: none;
+  }
+  #dropdown5{
+    display: none;
+  }
+  #dropdown6{
+    display: none;
   }
   h2{
     text-align: center;
@@ -83,6 +143,11 @@
   }
   p{
     text-align: center;
+  }
+  .container{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: justify;
   }
   .file-content .tablink{
     margin-top: 20px;
@@ -130,7 +195,6 @@
     width: 100%;
     content: left;
     display: flex;
-    padding-bottom: 5px;
   }
   .column{
     position: relative;
@@ -138,12 +202,14 @@
     padding: 5px;
   }
   .item2 button{
+    background-color:#B3DFF5;
     width:100%;
-    background-color: #B3DFF5;
     border: none;
     padding: 10px;
     color: #063F5C;
-  
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
   }
   .tabcontent p{
     padding: 5px;
@@ -162,33 +228,10 @@
     background-color: #B3DFF5;
     display: grid;
     padding: 10px;
+    grid-template-columns: 25% 25% 25% 25%;
   }
   .grid-item h4{
     font-weight: bold;
-  }
-  .item1 {
-    text-align: left;
-    grid-column: 1 / span 2;
-    grid-row: 1;
-    text-align: justify;
-    padding: 5px;
-    width: 500px;
-  }
-  
-  .item2 {
-    grid-column: 3;
-    grid-row: 1;
-    width: 50px;
-    margin: auto;
-    vertical-align: bottom;
-  }
-  .item3 {
-    text-align: left;
-    grid-column: 1 / span 3;
-    grid-row: 2 / span 3;
-    text-align: justify;
-    padding-top: 5px;
-    transition-timing-function: ease-in-out;
   }
   #dropdown {
     width: 100%;
@@ -226,7 +269,7 @@
     padding-bottom: 15px;
   }
   .advertise-container button{
-    margin-left: 13%;
+    margin-left: 22%;
     display: block;
     text-decoration:none;
     color: #F4F4F4;
@@ -235,7 +278,11 @@
     border: none;
     text-align: center;
     font-size: small;
-    padding: 15px 50px;
+    padding: 8px 50px;
+  }
+  .advertise-container button p{
+    text-align: center;
+    justify-content: center;
   }
   .advertise-container button:hover{
     background-color: black;
@@ -288,9 +335,9 @@
   .pic-column{
     background-color: #6C878C;
     width: 20%;
-    width: 300px;
     height: 200px;
     margin: 10px;
+    overflow-y: hidden;
   }
   /*footer part*/
   .footer{
@@ -301,37 +348,193 @@
     height: 150px;
     text-align: center;
   }
-  /*
-  @media screen and (max-width: 900px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
+  /*tablet*/
+  @media screen and (max-width: 768px) {
+    .file-content{
+      width: 95%;
     }
-    .header .logo{
-      margin-left: auto;
-      margin-right: auto;
-      display: block;
-      position: absolute;
+  }
+  /*phone*/
+  @media screen and (max-width: 500px) {
+    header{
+      font-size: 10px;
+      padding: 5px;
     }
-    .header-right {
-      float: none;
+    .header-right{
+      overflow-y: hidden;
     }
-    .nav{
+    body{
+      font-size: 10px;
+    }
+    nav{
+      padding: 5px;
+      font-size: 10px;
+    }
+    .navbar{
+      overflow-y: hidden;
+    }
+    .subnav-button{
+      display: initial;
+      justify-content: center;
+      height: 0px;
+      padding: 10px;
       text-align: center;
-      float: none;
+      font-size: 9px;
     }
-    .nav a{
-      max-width: 100%;
+    .top-content-container-button{
+      top: 60%;
+      padding: 10px 15px;
+      font-size: 7px;
     }
-    .content img{
-      transition-delay: 0ms;
-      max-width: 100%;
-      height: 70%;
+    .file-content h2{
+      font-size: 12px;
+    }
+    .file-content{
+      width: auto;
+      margin-bottom: 0%;
+      padding: 10px;
+    }
+    .file-content .tablink{
+      font-size: 10px;
+      padding: 10px 0px 15px 10px;
+      border-radius: 10px;
+    }
+    .tabcontent{
+      padding-bottom: 10px;
+      padding: 5px;
+      text-align: center;
+      top: -45px;
+      border-radius: 10px;
+    }
+    .container{
+      padding: 5px 5px 5px 5px;
+      font-size: 7px;
+    }
+    .row{
+      font-size: 7px;
+      width: 100%;
+      display: block;
+    }
+    .column{
+      margin-left: auto;
+      margin-right:auto;
+      height: 100%;
+      position: relative;
+      width:95%;
+      padding: 2px;
+    }
+    .grid-container{
+      padding: 5px 0px;
+    }
+    .item1{
+      position: relative;
+      text-align: left;
+      padding: 10px;
+      height: 20px;
+      padding-bottom: none;
+    }
+    .item2{
+      padding: 5px;
+      width: 30px;
+      margin-left: auto;
+      vertical-align: bottom;
+      padding-bottom: none;
+    }
+    .item3 {
+      width: 100%;
+      height: 50px;
+      text-align: left;
+      grid-column: 1 / span 4;
+      grid-row: 2 / span 4;
+      text-align: justify;
+      padding-top: none;
+      transition-timing-function: ease-in-out;
+    }
+    .item3 p{
+      padding: 0px 10px;
+    }
+    .advertise-container{
+      width: auto;
+      height: 70px;
+      overflow-y: hidden;
+      border-radius: 8px;
+      padding: 5px;
+    }
+    .row-ad{
+      width: 100%;
+      height: 100%;
+    }
+    .column-ad{
+      padding:5px ;
+      display: block;
+      float: left;
+      width: 50%;
+      overflow-y: hidden;
+    }
+    .text-field{
+      display: contents;
+      width: 100%;
+      height: 100%;
+    }
+    .advertise{
+      padding-bottom: 10px;
+    }
+    .advertise h3{
+      font-size: 9px;
+    }
+    .advertise p{
+      font-size: 7px;
+    }
+    .advertise-container button{
+      overflow-y: hidden;
+      height: 20px;
+      margin-left: 20%;
+      padding: 0px 10px;
+    }
+    button p{
+      padding: 5px;
+    }
+    .advertise-container button:hover{
+      background-color: black;
+    }
+    .advertise-container img{
+      width: 100%;
+      height: 100%;
+      background-color: grey;
+    }
+    .sub-content-with-picture{
+      font-size: 8px;
+    }
+    .sub-content-with-picture h3{
+      font-size: 12px;
+    }
+    .sub-content-with-picture p{
+      font-size: 10px;
+    }
+    .sub-content-with-picture-container{
+      position: relative;
+      width:100%;
+      height: 200px;
+      overflow-x: auto;
+    }
+    .sub-content-with-picture-container::-webkit-scrollbar{
+      width: 0px;
+      display: none;
+    }
+    .pic-row{
+      position: absolute;
+      width: 155%;
+    }
+    .pic-column{
+      background-color: #6C878C;
+      width: 100px;
+      height: 150px;
+      margin: 10px;
+      overflow-y: hidden;
+      display: inline-block;
+    }
+    .pic-column img{
+      width: 100%;
+      height: 150px;
     }
   }
-  @media screen and (max-width: 320px) {
-  
-  }
-  
-  
