--- a/Studio2/studiostyle.css
+++ b/Studio2/studiostyle.css
@@ -491,3 +491,9 @@ header a{
     color:black;
     height: 200px;
 }
+@media screen and (max-width: 768px) {
+
+}
+@media screen and (max-width: 500px) {
+    
+}
