--- a/Vet1/vetstyle.css
+++ b/Vet1/vetstyle.css
@@ -428,7 +428,7 @@
   /*phone*/
   @media screen and (max-width: 500px) {
     header{
-      font-size: 15px;
+      font-size: 12px;
       padding: 5px;
     }
     .header-right{
@@ -439,7 +439,7 @@
     }
     nav{
       padding: 5px;
-      font-size: 12px;
+      font-size: 10px;
     }
     .navbar{
       overflow-y: hidden;
@@ -454,10 +454,13 @@
     .top-content-container-button{
       top: 60%;
       padding: 10px 15px;
-      font-size: 10px;
+      font-size: 8px;
     }
     .file-content h2{
-      font-size: 13px;
+      font-size: 12px;
+    }
+    .file-content p{
+      font-size: 10px;
     }
     .file-content{
       width: auto;
@@ -564,8 +567,9 @@
       height: 20px;
       margin-left: 20%;
       padding: 0px 10px;
+      font-size: 8px;
     }
-    button p{
+    .advertise-container button p{
       padding: 5px;
       font-size: 8px;
     }
