--- a/Vet2/vet2css.css
+++ b/Vet2/vet2css.css
@@ -1,10 +1,12 @@
-body{
-    background-color: #F4F4F4; 
+body {
+    background-color: #F4F4F4;
 }
-*{
-margin: 0;
+
+* {
+    margin: 0;
 }
-.Menubar{
+
+.Menubar {
     margin: 0;
     position: absolute;
     top: 1px;
@@ -16,122 +18,138 @@ margin: 0;
     align-items: center;
     width: 1525px;
 }
-.Menubar .tool{
+
+.Menubar .tool {
     display: flex;
     display: -webkit-flex;
-    
+
 }
-.tool{
+
+.tool {
     font-size: 20px;
     width: 300px;
     justify-content: space-around;
 }
-.home{
+
+.home {
     color: rgb(0, 0, 0);
     text-decoration: none;
     font-size: 40px;
-    
-} 
-.tool1{
+
+}
+
+.tool1 {
     color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
-.Picpro{
+.Picpro {
     position: relative;
-width: 1585px;
-height: 750px;
-filter: brightness(50%);
-object-fit: cover;
+    width: 1585px;
+    height: 750px;
+    filter: brightness(50%);
+    object-fit: cover;
 }
-.profile{
+
+.profile {
     position: relative;
     margin: 0;
     padding: 0;
 }
-.textpro1{
+
+.textpro1 {
     position: absolute;
     top: 150px;
     font-size: 60px;
     width: 700px;
     padding-left: 90px;
 }
-.textpro2{
+
+.textpro2 {
     position: absolute;
     top: 350px;
     padding-left: 90px;
     font-size: 20px;
     width: 500px;
 }
-.buttonpro{
+
+.buttonpro {
     background-color: #F4F4F4;
     position: absolute;
     top: 500px;
     left: 90px;
     font-size: 30px;
     width: 150px;
-    text-align: center ;
+    text-align: center;
     padding: 8px;
     box-shadow: 5px 5px 5px;
     border: 0;
 }
 
 
-.page1{
+.page1 {
     width: auto;
     margin: 0;
     position: relative;
     padding: 70px;
     margin-bottom: 550px;
 }
-.woman1{
+
+.woman1 {
     width: 400px;
     height: 450px;
     object-fit: cover;
     text-align: center;
 }
-.textbox1{
+
+.textbox1 {
     position: absolute;
     top: 60px;
     left: 250px;
     width: 400px;
 }
-.textbox2{
+
+.textbox2 {
     position: absolute;
     top: 60px;
     left: 1000px;
     width: 400px;
 }
-.textbox3{
+
+.textbox3 {
     position: absolute;
     left: 200px;
     top: 400px;
     width: 400px;
 }
-.textbox4{
+
+.textbox4 {
     position: absolute;
     left: 1050px;
     top: 400px;
     width: 400px;
 }
-.womanfix{
+
+.womanfix {
     position: absolute;
     left: 550px;
     width: 500px;
     text-align: center;
 }
-.headp1{
+
+.headp1 {
     font-weight: bold;
     font-size: 35px;
 }
-.textp1{
+
+.textp1 {
     padding-left: 28px;
     font-size: 20px;
 }
 
 
 
-.page2{
+.page2 {
     width: 1445px;
     margin: 0;
     position: relative;
@@ -139,45 +157,52 @@ object-fit: cover;
     height: 630px;
     background-color: #CDE0EB;
 }
-.headpage2{
+
+.headpage2 {
     position: absolute;
     left: 650px;
     top: 80px;
     text-align: center;
     font-size: 50px;
 }
-.textbox1p2{
+
+.textbox1p2 {
     position: absolute;
     top: 220px;
     left: 170px;
     width: 400px;
-    
+
 }
-.textbox2p2{
+
+.textbox2p2 {
     position: absolute;
     top: 220px;
     left: 640px;
     width: 400px;
 }
-.textbox3p2{
+
+.textbox3p2 {
     position: absolute;
     left: 1110px;
     top: 220px;
     width: 400px;
 }
-.textbox4p2{
+
+.textbox4p2 {
     position: absolute;
     left: 170px;
     top: 500px;
     width: 400px;
 }
-.textbox5p2{
+
+.textbox5p2 {
     position: absolute;
     left: 640px;
     top: 500px;
     width: 400px;
 }
-.textbox6p2{
+
+.textbox6p2 {
     position: absolute;
     left: 1110px;
     top: 500px;
@@ -185,61 +210,69 @@ object-fit: cover;
 }
 
 
-.page3{
+.page3 {
     width: 1445px;
     margin: 0;
     position: relative;
     padding: 70px;
-    height: 500px;;
+    height: 500px;
+    ;
 }
-.headpage3{
+
+.headpage3 {
     position: absolute;
     left: 600px;
     top: 70px;
     text-align: center;
     font-size: 50px;
-    
+
 }
+
 /* .doctor{
     
 } */
-.doctor1{
+.doctor1 {
     position: absolute;
     top: 200px;
     left: 190px;
     width: 300px;
     text-align: center;
 }
-.doctor2{
+
+.doctor2 {
     position: absolute;
     top: 200px;
     left: 640px;
     width: 300px;
     text-align: center;
 }
-.doctor3{
+
+.doctor3 {
     position: absolute;
     top: 200px;
     left: 1090px;
     width: 300px;
     text-align: center;
 }
-.imgdr{
+
+.imgdr {
     width: 250px;
     height: 260px;
     object-fit: cover;
 }
+
 /* .textdoc{
 
 } */
-.nametext{
+.nametext {
     font-size: 30px;
 }
-.textmajor{
+
+.textmajor {
     font-size: 20px;
 }
 
-.pagesup{
+.pagesup {
     width: 1525px;
     position: relative;
     padding: 30px;
@@ -247,42 +280,379 @@ object-fit: cover;
     height: 50px;
     margin: 0;
 }
-.textsup{
- width: 1300px;
- font-size: 20px;
- padding-top: 5px;
+
+.textsup {
+    width: 1300px;
+    font-size: 20px;
+    padding-top: 5px;
 }
-.buttonsup{
- position: absolute;
- left: 1400px;
- top: 35px;
- width: 150px;
- height: 50px;
- font-size: 20px;
- box-shadow: 3px 3px ;
+
+.buttonsup {
+    position: absolute;
+    left: 1400px;
+    top: 35px;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
+    box-shadow: 3px 3px;
 }
-.gridvideopage{
+
+.gridvideopage {
     display: grid;
     grid-template-columns: auto auto auto auto;
     background-color: #CDE0EB;
     width: 1585px;
 }
+
 /* .videogriditem1{
 
 } */
-.griditem1{
+.griditem1 {
     padding: 35px;
 }
-video{
+
+video {
     width: 395px;
     height: 395px;
     object-fit: cover;
 }
-.textpage4{
+
+.textpage4 {
     font-size: 20px;
 }
-.footerpage{
+
+.footerpage {
     background-color: #909CA5;
     width: 1585px;
     height: 200px;
 }
+
+
+/* @media only screen and (max-width: 480px) {
+
+    .Menubar {
+        background-color: aqua;
+        margin: 0;
+        position: absolute;
+        height: 50px;
+        display: flex;
+        padding-left: 50px;
+        justify-content: space-between;
+        align-items: center;
+        width: 350px;
+    }
+
+    .Menubar .tool {
+        display: flex;
+        display: -webkit-flex;
+
+    }
+
+    .tool {
+        font-size: 15px;
+        width: 150px;
+        justify-content: space-around;
+    }
+
+    .home {
+        color: rgb(0, 0, 0);
+        text-decoration: none;
+        font-size: 30px;
+
+    }
+
+    .tool1 {
+        color: rgb(0, 0, 0);
+        text-decoration: none;
+    }
+
+    .Picpro {
+        position: relative;
+        width: 410px;
+        height: 270px;
+        filter: brightness(50%);
+        object-fit: cover;
+    }
+
+    .profile {
+        position: relative;
+        margin: 0;
+        padding: 0;
+    }
+
+    .textpro1 {
+        position: absolute;
+        top: 30px;
+        font-size: 22px;
+        width: 250px;
+        padding-left: 30px;
+    }
+
+    .textpro2 {
+        position: absolute;
+        top: 90px;
+        padding-left: 30px;
+        font-size: 16px;
+        width: 300px;
+    }
+
+    .buttonpro {
+        background-color: #F4F4F4;
+        position: absolute;
+        top: 180px;
+        left: 30px;
+        font-size: 18px;
+        width: 100px;
+        text-align: center;
+        padding: 5px;
+        box-shadow: 5px 5px 5px;
+        border: 0;
+    }
+
+
+    .page1 {
+        height: 120px;
+        width: auto;
+        margin: 0;
+        position: relative;
+        padding: 70px;
+        margin-bottom: 20px;
+    }
+
+    .woman1 {
+        width: 100px;
+        height: 125px;
+        object-fit: cover;
+        text-align: center;
+    }
+
+    .textbox1 {
+        position: absolute;
+        top: 20px;
+        left: 30px;
+        width: 150px;
+    }
+
+    .textbox2 {
+        position: absolute;
+        top: 20px;
+        left: 230px;
+        width: 150px;
+    }
+
+    .textbox3 {
+        position: absolute;
+        left: 20px;
+        top: 150px;
+        width: 150px;
+    }
+
+    .textbox4 {
+        position: absolute;
+        left: 250px;
+        top: 150px;
+        width: 150px;
+    }
+
+    .womanfix {
+        position: absolute;
+        left: 135px;
+        top: 55px;
+        width: 130px;
+        text-align: center;
+    }
+
+    .headp1 {
+        font-weight: bold;
+        font-size: 15px;
+    }
+
+    .textp1 {
+        padding-left: 15px;
+        font-size: 10px;
+    }
+
+
+
+    .page2 {
+        width: 390px;
+        margin: 0;
+        position: relative;
+        padding: 10px;
+        height: 440px;
+        background-color: #CDE0EB;
+    }
+
+    .headpage2 {
+        position: absolute;
+        left: 150px;
+        top: 20px;
+        font-size: 22px;
+    }
+
+    .textbox1p2 {
+        position: absolute;
+        top: 80px;
+        left: 50px;
+        width: 150px;
+    }
+
+    .textbox2p2 {
+        position: absolute;
+        top: 80px;
+        left: 230px;
+        width: 150px;
+    }
+
+    .textbox3p2 {
+        position: absolute;
+        left: 50px;
+        top: 200px;
+        width: 150px;
+    }
+
+    .textbox4p2 {
+        position: absolute;
+        left: 230px;
+        top: 200px;
+        width: 150px;
+    }
+
+    .textbox5p2 {
+        position: absolute;
+        left: 50px;
+        top: 320px;
+        width: 150px;
+    }
+
+    .textbox6p2 {
+        position: absolute;
+        left: 230px;
+        top: 320px;
+        width: 150px;
+    }
+
+
+    .page3 {
+        background-color: aqua;
+        width: 390px;
+        margin: 0;
+        position: relative;
+        padding: 10px;
+        height: 150px;
+        ;
+    }
+
+    .headpage3 {
+        position: absolute;
+        left: 120px;
+        top: 20px;
+        text-align: center;
+        font-size: 22px;
+
+    }
+
+    /* .doctor{
+        
+    } */
+    .doctor1 {
+        position: absolute;
+        top: 40px;
+        left: 190px;
+        width: 100px;
+        text-align: center;
+    }
+
+    .doctor2 {
+        position: absolute;
+        top: 40px;
+        left: 640px;
+        width: 100px;
+        text-align: center;
+    }
+
+    .doctor3 {
+        position: absolute;
+        top: 40px;
+        left: 1090px;
+        width: 100px;
+        text-align: center;
+    }
+
+    .imgdr {
+        width: 50px;
+        height: 60px;
+        object-fit: cover;
+    }
+
+    /* .textdoc{
+    
+    } */
+    .nametext {
+        font-size: 18px;
+    }
+
+    .textmajor {
+        font-size: 16px;
+    }
+
+    .pagesup {
+        width: 1525px;
+        position: relative;
+        padding: 30px;
+        background-color: #A7D5E1;
+        height: 50px;
+        margin: 0;
+    }
+
+    .textsup {
+        width: 1300px;
+        font-size: 20px;
+        padding-top: 5px;
+    }
+
+    .buttonsup {
+        position: absolute;
+        left: 1400px;
+        top: 35px;
+        width: 150px;
+        height: 50px;
+        font-size: 20px;
+        box-shadow: 3px 3px;
+    }
+
+    .gridvideopage {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        background-color: #CDE0EB;
+        width: 1585px;
+    }
+
+    /* .videogriditem1{
+    
+    } */
+    .griditem1 {
+        padding: 35px;
+    }
+
+    video {
+        width: 395px;
+        height: 395px;
+        object-fit: cover;
+    }
+
+    .textpage4 {
+        font-size: 20px;
+    }
+
+    .footerpage {
+        background-color: #909CA5;
+        width: 1585px;
+        height: 200px;
+    }
+
+}
+
+@media only screen and (max-width: 768px) {}
+
+@media only screen and (max-width: 1024px) {} */
