--- a/cs1.css
+++ b/cs1.css
@@ -229,3 +229,14 @@ font-size: 150px;
     color: rgb(255, 255, 255);
     font-size: 18px;
 }
+
+
+@media only screen and (max-width: 768px){
+
+}
+@media only screen and (max-width: 768px){
+
+}
+@media only screen and (max-width: 1024px){
+
+}
