--- a/Vet2/vet2css.css
+++ b/Vet2/vet2css.css
@@ -328,7 +328,7 @@ video {
 }
 
 
-/* @media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 
     .Menubar {
         background-color: aqua;
@@ -655,4 +655,4 @@ video {
 
 @media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 1024px) {} */
+@media only screen and (max-width: 1024px) {}
