--- a/Studio2/studiostyle.css
+++ b/Studio2/studiostyle.css
@@ -700,16 +700,57 @@ img{
 }
 @media screen and (max-width: 375px) {
     .picture-on-right img{
-        left:-95%;
+        left:-100%;
+    }
+    .col-picture-container{
+        width: 70px;
+        height: 125px;
+    }
+}
+@media screen and (max-width: 320px) {
+    .item2 .bottom-right-text{
+        height:240px;
+        width:240px;
+    }
+    .bottom-right-text p{
+        font-size: 11px;
+    }
+    .picture-on-right img{
+        left:-140%;
     }
     .picture-on-right h1{
         left:-7%;
     }
+    .second-content{
+        margin-top: 0px;
+    }
+    .second-content h1{
+        font-size: 15px;
+    }
     .second-content-color-middle{
-        height: 240px;
+        height: 220px;
+        margin-top: 35px;
     }
     .col-picture-container{
-        width: 70px;
-        height: 110px;
+        width: 55px;
+        height: 100px;
+    }
+    .detail-on-left .detail-container{
+        width:300px;
+    }
+    .picture-on-right h1{
+        left:-35%;
+    }
+    .detail-container{
+        width:300px;
+    }
+    h1{
+        font-size: 15px;
+    }
+    h3{
+        font-size: 13px;
+    }
+    p{
+        font-size: 10px;
     }
 }
