--- a/Grooming1/groomingstyle.css
+++ b/Grooming1/groomingstyle.css
@@ -305,6 +305,8 @@ header a{
 }
 /*calendar part*/
 .calendar-part{
+    position: relative;
+    height: 70vh;
     display: grid;
 
 }
@@ -435,8 +437,13 @@ header a{
     background-color: #466B59;
 }
 @media screen and (max-width: 768px) {
-
+    .item-container p{
+        font-size: 13px;
+    }
 }
 @media screen and (max-width: 500px) {
+    
+}
+@media screen and (max-width: 320px) {
     
 }
