--- a/Studio2/studiostyle.css
+++ b/Studio2/studiostyle.css
@@ -706,6 +706,9 @@ img{
         width: 70px;
         height: 125px;
     }
+    .slider{
+        width:100%;
+    }
 }
 @media screen and (max-width: 320px) {
     .item2 .bottom-right-text{
