--- a/Grooming1/groomingstyle.css
+++ b/Grooming1/groomingstyle.css
@@ -99,11 +99,12 @@ header a{
 /*PART 2*/
 .introduction-part{
     width: 100%;
-    height: 50vh;
+    height: 100%;
 }
 .content-container{
     width: 60%;
     margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -124,7 +125,7 @@ header a{
 /*PART 3*/
 #navigate-introduction-part{
     width: 100%;
-    height: 120vh;
+    height: 100%;
     display: grid;
     grid-template-columns:25% 25% 25% 25%;
     scroll-snap-type: y mandatory;
@@ -182,6 +183,7 @@ header a{
 }
 .item-container{
     padding: 30px;
+    padding-bottom: 60px;
     width: 100%;
     height: 100%;
     position: relative;
@@ -191,8 +193,13 @@ header a{
 }
 .item-container p{
     font-size: 15px;
+    padding-bottom: 25px;
+    /*
+    text-align:justify ;
+    justify-content: center;*/
 }
 .item-button{
+    display: block;
     width: 45%;
     background-color: black;
     color: #FFFFFF;
@@ -214,7 +221,6 @@ header a{
     width: 100%;
     height: 60vh;
 }
-
 
 /*PART 5*/
 .other-services-part{
@@ -286,6 +292,7 @@ header a{
     right: 0;
     object-fit: cover;
 }
+/*FOOTER*/
 .footer{
     background-color: #F1E7E5;
     padding: 30px;
@@ -324,7 +331,6 @@ header a{
 }
 
 .calendar-head{
-    position: relative;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -354,8 +360,8 @@ header a{
 }
 
 .calendar-day div {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -369,8 +375,7 @@ header a{
 }
 
 .month-pick{
-    padding-top: 5px;
-    padding-right: 30px;
+    padding: 5px 10px;
     cursor: pointer;
 }
 
@@ -439,39 +444,21 @@ header a{
     cursor: pointer;
 }
 
-.calendar-head .headmonth{
-    font-size: 10px;
-    position: absolute;
-    top: 1px;
-    left: 1px;
-}
-.calendar-head .monthpick{
-    position: absolute;
-    top: 17px;
-    left: 120px;
-    rotate: 90deg;
-    cursor: pointer;
-}
-.calendar-head .headyear{
-    font-size: 10px;
-    position: absolute;
-    top: 1px;
-    left: 180px;
-}
-#pre-year{
-    rotate: 270deg;
-}
-#next-year{
-    rotate: 270deg;
-}
-
-
 .month-list > div > div:hover{
     background-color: #466B59;
 }
 @media screen and (max-width: 1024px) {
     .top-introduction-container{
         width: 70%;
+    }
+    .content-container h2{
+        font-size: 35px;
+    }
+    .content-container p{
+        font-size: 13px;
+    }
+    .introduction-part{
+        height: 60vh;
     }
     .item-container h4{
         font-size: 20px;
@@ -562,13 +549,16 @@ header a{
     }
     .top-introduction-container a{
         padding: 12px 30px;
-        bottom:15px;
+        bottom: -25px;
     }
     .content-container h2{
         font-size: 25px;
     }
     .content-container p{
         font-size: 10px;
+    }
+    .item-container h4{
+        font-size: 15px;
     }
     .item-container p{
         font-size: 10px;
@@ -619,7 +609,58 @@ header a{
         grid-row: 6;
         grid-column: 1;
     }
+    .introduction-part{
+        height: 50vh;
+    }
+    .calendar{
+        font-size: 15px;
+    }
+    .calendar-head{
+        font-size: 18px;
+    }
 }
-@media screen and (max-width: 320px) {
-    
+@media screen and (max-width: 425px) {
+    .header-row{
+        grid-template-columns: 49% 2% 49%;
+    }
+    .top-introduction-container{
+        margin-left: 20px;
+    }
+    .calendar{
+        font-size: 10px;
+        padding: 10px;
+    }
+    .calendar-head{
+        font-size: 15px;
+    }
+    .item-container{
+        top:5%;
+    }
+    .item-button{
+        bottom:20%;
+    }
+    .other-services-part{
+        height: 60vh;
+        grid-template-columns: auto auto;
+        grid-template-rows: 25% 25% 25% 25%;
+    }
+    .service-item1{
+        background-color: black;
+        grid-column: 1 / span 2;
+        grid-row: 1 / span 2;
+    }
+    .service-item2{
+        background-color: black;
+        grid-row: 3;
+        grid-column: span 2;
+    }
+    .service-item3{
+        background-color: black;
+        grid-row: 4;
+        grid-column: 1;
+    }
+    .service-item4{
+        grid-row: 4;
+        grid-column: 2;
+    }
 }
